force-app/main/default/objects/Evmd__TriggerSettings__c/Evmd__TriggerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Trigger Settings</label>
</CustomObject>