force-app/main/default/objects/Evmd__TriggerSettings__c/fields/Evmd__AfterDelete__c.field-meta.xml
<CustomField>
    <fullName>Evmd__AfterDelete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AfterDelete</label>
    <type>Checkbox</type>
</CustomField>