force-app/main/default/objects/Evmd__TriggerSettings__c/fields/Evmd__AfterInsert__c.field-meta.xml
<CustomField>
    <fullName>Evmd__AfterInsert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AfterInsert</label>
    <type>Checkbox</type>
</CustomField>