force-app/main/default/objects/Evmd__TriggerSettings__c/fields/Evmd__AfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>Evmd__AfterUndelete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AfterUndelete</label>
    <type>Checkbox</type>
</CustomField>