force-app/main/default/objects/Evmd__TriggerSettings__c/fields/Evmd__AfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>Evmd__AfterUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AfterUpdate</label>
    <type>Checkbox</type>
</CustomField>