force-app/main/default/objects/Evmd__TriggerSettings__c/fields/Evmd__BeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>Evmd__BeforeDelete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BeforeDelete</label>
    <type>Checkbox</type>
</CustomField>