force-app/main/default/objects/Evmd__TriggerSettings__c/fields/Evmd__BeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>Evmd__BeforeInsert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BeforeInsert</label>
    <type>Checkbox</type>
</CustomField>