force-app/main/default/objects/Evmd__TriggerSettings__c/fields/Evmd__BeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>Evmd__BeforeUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BeforeUpdate</label>
    <type>Checkbox</type>
</CustomField>